{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 15,
  "lineage": "4ab42bb5-495c-c593-2625-a5c1aaa6a25c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2020-12-04T15:12:01.083-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cncf-280014/global/firewalls/k8s-kubernetes",
            "log_config": [],
            "name": "k8s-kubernetes",
            "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
            "priority": 1000,
            "project": "cncf-280014",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/firewalls/k8s-kubernetes",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "kubernetes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-04T15:12:01.633-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cncf-280014/global/firewalls/k8s-master",
            "log_config": [],
            "name": "k8s-master",
            "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
            "priority": 1000,
            "project": "cncf-280014",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/firewalls/k8s-master",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "master"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-04T15:12:01.416-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cncf-280014/global/firewalls/k8s-nodes",
            "log_config": [],
            "name": "k8s-nodes",
            "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
            "priority": 1000,
            "project": "cncf-280014",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/firewalls/k8s-nodes",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201201",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cncf-280014/zones/us-central1-a/disks/master0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cncf-280014/zones/us-central1-a/instances/master0",
            "instance_id": "5574667750500433063",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "sshKeys": "matheus:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCl584cWZT9BPq8K4tySrIiZSMFhR9lCuvox3xE+BEP1POWZXZialUKd6/aDDer2xlghEpIi3kJQ/gZRquy0W7cs26DSEw17yEZBJlQvYcW2ICkZJnkAQgls50Shmd8R4ngDGkhqjmojsmr1AllIIwNS7nRjQGPMpifas4kD/RaU0OfK6zM+pnqdB6/CpC7ystlHdSaHky+GQb9v3NBiIWQpm2HnG8LYZix0ellu9DaGP77EXKqE9oQ3KAtxSQYOGLmQMTQ9AWJsc3Zsfe/xjX5u4Vj91RX/7RDRrCduTERT6e37jPC6CNlWWEhMkXLpEZqVW2dYJeKYVmIuMXTLDSYOsERUOrFS2in1aVPPRjpM0FVFWX4L+m56T7U3rnamMFgvAfYPNLcBQrAsTcIcaovuazqTjW5U+fSMQADT2Mf+z [...]
            },
            "metadata_fingerprint": "q9hbV9-UQ0A=",
            "name": "master0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.72.223.180",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
                "network_ip": "10.26.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cncf-280014/regions/us-central1/subnetworks/public-subnet-us-central1a",
                "subnetwork_project": "cncf-280014"
              }
            ],
            "project": "cncf-280014",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/zones/us-central1-a/instances/master0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes",
              "master"
            ],
            "tags_fingerprint": "UXl0DrYZ-m0=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201201",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cncf-280014/zones/us-central1-a/disks/node0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cncf-280014/zones/us-central1-a/instances/node0",
            "instance_id": "7499204748586220711",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "sshKeys": "matheus:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCl584cWZT9BPq8K4tySrIiZSMFhR9lCuvox3xE+BEP1POWZXZialUKd6/aDDer2xlghEpIi3kJQ/gZRquy0W7cs26DSEw17yEZBJlQvYcW2ICkZJnkAQgls50Shmd8R4ngDGkhqjmojsmr1AllIIwNS7nRjQGPMpifas4kD/RaU0OfK6zM+pnqdB6/CpC7ystlHdSaHky+GQb9v3NBiIWQpm2HnG8LYZix0ellu9DaGP77EXKqE9oQ3KAtxSQYOGLmQMTQ9AWJsc3Zsfe/xjX5u4Vj91RX/7RDRrCduTERT6e37jPC6CNlWWEhMkXLpEZqVW2dYJeKYVmIuMXTLDSYOsERUOrFS2in1aVPPRjpM0FVFWX4L+m56T7U3rnamMFgvAfYPNLcBQrAsTcIcaovuazqTjW5U+fSMQADT2Mf+z [...]
            },
            "metadata_fingerprint": "q9hbV9-UQ0A=",
            "name": "node0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.64.247",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
                "network_ip": "10.26.1.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cncf-280014/regions/us-central1/subnetworks/public-subnet-us-central1a",
                "subnetwork_project": "cncf-280014"
              }
            ],
            "project": "cncf-280014",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/zones/us-central1-a/instances/node0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes",
              "node"
            ],
            "tags_fingerprint": "hr19be95wT0=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet1a"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201201",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cncf-280014/zones/us-central1-a/disks/node1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cncf-280014/zones/us-central1-a/instances/node1",
            "instance_id": "5246573059865279655",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "sshKeys": "matheus:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCl584cWZT9BPq8K4tySrIiZSMFhR9lCuvox3xE+BEP1POWZXZialUKd6/aDDer2xlghEpIi3kJQ/gZRquy0W7cs26DSEw17yEZBJlQvYcW2ICkZJnkAQgls50Shmd8R4ngDGkhqjmojsmr1AllIIwNS7nRjQGPMpifas4kD/RaU0OfK6zM+pnqdB6/CpC7ystlHdSaHky+GQb9v3NBiIWQpm2HnG8LYZix0ellu9DaGP77EXKqE9oQ3KAtxSQYOGLmQMTQ9AWJsc3Zsfe/xjX5u4Vj91RX/7RDRrCduTERT6e37jPC6CNlWWEhMkXLpEZqVW2dYJeKYVmIuMXTLDSYOsERUOrFS2in1aVPPRjpM0FVFWX4L+m56T7U3rnamMFgvAfYPNLcBQrAsTcIcaovuazqTjW5U+fSMQADT2Mf+z [...]
            },
            "metadata_fingerprint": "q9hbV9-UQ0A=",
            "name": "node1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.194.29.31",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
                "network_ip": "10.26.1.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cncf-280014/regions/us-central1/subnetworks/public-subnet-us-central1a",
                "subnetwork_project": "cncf-280014"
              }
            ],
            "project": "cncf-280014",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/zones/us-central1-a/instances/node1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes",
              "node"
            ],
            "tags_fingerprint": "hr19be95wT0=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/cncf-280014/global/networks/k8s-network",
            "mtu": 0,
            "name": "k8s-network",
            "project": "cncf-280014",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-04T15:07:17.519-08:00",
            "gateway_address": "10.26.3.1",
            "id": "projects/cncf-280014/regions/us-central1/subnetworks/private-subnet-us-central1a",
            "ip_cidr_range": "10.26.3.0/24",
            "name": "private-subnet-us-central1a",
            "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cncf-280014",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/regions/us-central1/subnetworks/private-subnet-us-central1a"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-04T15:07:17.512-08:00",
            "gateway_address": "10.26.4.1",
            "id": "projects/cncf-280014/regions/us-central1/subnetworks/private-subnet-us-central1b",
            "ip_cidr_range": "10.26.4.0/24",
            "name": "private-subnet-us-central1b",
            "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cncf-280014",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/regions/us-central1/subnetworks/private-subnet-us-central1b"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-04T15:07:17.372-08:00",
            "gateway_address": "10.26.1.1",
            "id": "projects/cncf-280014/regions/us-central1/subnetworks/public-subnet-us-central1a",
            "ip_cidr_range": "10.26.1.0/24",
            "name": "public-subnet-us-central1a",
            "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cncf-280014",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/regions/us-central1/subnetworks/public-subnet-us-central1a"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-04T15:07:16.341-08:00",
            "gateway_address": "10.26.2.1",
            "id": "projects/cncf-280014/regions/us-central1/subnetworks/public-subnet-us-central1b",
            "ip_cidr_range": "10.26.2.0/24",
            "name": "public-subnet-us-central1b",
            "network": "https://www.googleapis.com/compute/v1/projects/cncf-280014/global/networks/k8s-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cncf-280014",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cncf-280014/regions/us-central1/subnetworks/public-subnet-us-central1b"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}